@@ -1,3 +1,8 @@
+Sat Aug  7 08:26:26 2010  Tanaka Akira  <akr@fsij.org>
+
+	* ext/pathname/pathname.c (path_chown): Pathname#chown translated
+	  from pathname.rb.
+
 Sat Aug  7 02:09:04 2010  Tanaka Akira  <akr@fsij.org>
 
 	* ext/pathname/pathname.c (path_lchmod): Pathname#lchmod translated
